Header: Fix alignment of private mode indicator

--- a/src/assets/styles/layout/_header.sass
+++ b/src/assets/styles/layout/_header.sass
@@ -115,7 +115,7 @@
     +icon-button
     +h3 // same as control icons in note-query
     margin-right: 3px
-    padding-top: 10px // same as padding in note-query
+    padding-top: 2px // same as padding in note-query
     color: $danger-color
 
     .unlocked
